サブページもマークアップ

--- a/i18n/locales/ja.json
+++ b/i18n/locales/ja.json
@@ -3,8 +3,8 @@
     "home": "ホーム",
     "news": "ニュース",
     "research": "研究概要",
-    "members": "組織・メンバー",
-    "contact": "Contact"
+    "members": "メンバー",
+    "contact": "問合せ"
   },
   "hero": {
     "title": "脂肪酸代謝多様性とその生物学的意義の理解",
