Members→Group、ページ内容の修正

--- a/i18n/locales/en.json
+++ b/i18n/locales/en.json
@@ -3,7 +3,7 @@
     "home": "Home",
     "news": "News",
     "research": "Research",
-    "members": "Members",
+    "group": "Group",
     "contact": "Contact"
   },
   "hero": {
