--- a/i18n/locales/ja.json
+++ b/i18n/locales/ja.json
@@ -3,7 +3,7 @@
     "home": "ホーム",
     "news": "ニュース",
     "research": "研究概要",
-    "members": "メンバー",
+    "group": "研究グループ",
     "contact": "問合せ"
   },
   "hero": {
