--- a/i18n/locales/ja.json
+++ b/i18n/locales/ja.json
@@ -4,7 +4,7 @@
     "news": "ニュース",
     "research": "研究概要",
     "group": "研究グループ",
-    "contact": "問合せ"
+    "achievement": "研究業績"
   },
   "hero": {
     "title": "脂肪酸代謝多様性とその生物学的意義の理解",
