--- a/i18n/locales/en.json
+++ b/i18n/locales/en.json
@@ -4,7 +4,7 @@
     "news": "News",
     "research": "Research",
     "group": "Group",
-    "contact": "Contact"
+    "achievement": "Achievement"
   },
   "hero": {
     "title": "Understanding the Diversity of Fatty Acid Metabolism and Its Biological Significance",
